Bug 514300 - Font Styles not properly set by Text Properties
Summary: Font Styles not properly set by Text Properties
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-07 22:36 UTC by marc1my2words2
Modified: 2026-01-13 11:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Demonstration of the Text Properties bug in Krita nightly build 9ab54c8. (40.45 KB, image/png)
2026-01-08 21:20 UTC, marc1my2words2
Details

Note You need to log in before you can comment on or make changes to this bug.
Description marc1my2words2 2026-01-07 22:36:51 UTC
SUMMARY
Development version of Krita (9ab54c8) with the new text tool will not properly change properties of existing text fields. As a side effect, .KRA project files utilizing bold and/or italicized text (authored in older development and production versions of Krita with the legacy text tool) do not display properly.

STEPS TO REPRODUCE
1. Create text field using Text Tool
2. Click "Open Text Properties"
3. Set Font Family to "Arial"
4. Set Font Style between Italic, Bold, and Bold Italic
5. Uncheck "Synthesize Bold" and "Synthesize Slant"
6. Adjust Weight and Width.

OBSERVED RESULT
Text uses actual Italic, Bold, or Bold Italic glyphs as shown in the Windows font viewer. On adjusting Weight and Width, text switches between Narrow and Black.

EXPECTED RESULT
Text defaults to the Regular glyphs regardless of settings with "Synthesize Bold" and "Synthesize Slant" turned off.

SOFTWARE/OS VERSIONS
Windows: 11 25H2 KB5072033
Qt Version: 5.15.11 (PyQt)

ADDITIONAL INFORMATION
git hash: 9ab54c85d4ab2b04d44f0fbfd87378934639bf79
Comment 1 marc1my2words2 2026-01-08 21:20:54 UTC
Created attachment 188337 [details]
Demonstration of the Text Properties bug in Krita nightly build 9ab54c8.
Comment 2 wolthera 2026-01-13 11:21:27 UTC
Git commit 645ed3a967f9ecfc56e070d05d05a0c5e6fccd7b by Wolthera van Hövell tot Westerflier.
Committed on 13/01/2026 at 11:19.
Pushed by woltherav into branch 'master'.

Fix selecting fonts whose full name is the same as their family name.

We are supossed to select based on the full name before the family name,
however, for the font "Arial", the full name of the regular font was the
same as the family name, meaning the family could not be selected.

We now only select on full name, if it is not the same as family name.

M  +8    -0    libs/flake/text/KoFFWWSConverter.cpp

https://invent.kde.org/graphics/krita/-/commit/645ed3a967f9ecfc56e070d05d05a0c5e6fccd7b