Fix selecting fonts whose full name is the same as their family name.

We are supossed to select based on the full name before the family name,
however, for the font "Arial", the full name of the regular font was the
same as the family name, meaning the family could not be selected.

We now only select on full name, if it is not the same as family name.

BUG:514300